<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ceng.muhendis.muneckexercises.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_settings"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="20dp"
                android:textColor="@color/greyDarker"
                android:id="@+id/settings_toolbar_title" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingTop="20dp">
        <LinearLayout
            android:id="@+id/settingsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/settingsInfoStaticText"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp_settings_main"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginVertical="24dp"/>

            <TextView
                android:id="@+id/settingsPart1StaticText"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/exp_settings1"
                android:textSize="16dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_8"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_9"
                        android:contentDescription="time_interval"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_10"
                        android:checked="true"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_11"
                        android:contentDescription="time_interval"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_12"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_13"
                        android:contentDescription="time_interval"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_14"
                        android:checked="true"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_15"
                        android:contentDescription="time_interval"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_16"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_17"
                        android:contentDescription="time_interval"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_18"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_19"
                        android:checked="true"
                        android:contentDescription="time_interval"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_20"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_21"
                        android:contentDescription="time_interval"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_22"
                        android:contentDescription="time_interval"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/time_interval_23"
                        android:contentDescription="time_interval"/>
                </TableRow>





            </TableLayout>

            <TextView
                android:id="@+id/settingsPart2StaticText"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp_settings2"
                android:textSize="16dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:id="@+id/settingsMondayCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:contentDescription="settings_days"
                        android:text="@string/settings_day_1" />

                    <CheckBox
                        android:id="@+id/settingsTuesdayCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:contentDescription="settings_days"
                        android:text="@string/settings_day_2" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:id="@+id/settingsWednesdayCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:contentDescription="settings_days"
                        android:text="@string/settings_day_3" />

                    <CheckBox
                        android:id="@+id/settingsThursdayCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:contentDescription="settings_days"
                        android:text="@string/settings_day_4" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <CheckBox
                        android:id="@+id/settingsFridayCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:contentDescription="settings_days"
                        android:text="@string/settings_day_5" />

                    <CheckBox
                        android:id="@+id/settingsSaturdayCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:contentDescription="settings_days"
                        android:text="@string/settings_day_6" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    >

                    <CheckBox
                        android:id="@+id/settingsSundayCB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="settings_days"
                        android:text="@string/settings_day_7" />

                </TableRow>





            </TableLayout>

            <TextView
                android:id="@+id/settingsLanguageHeaderStaticText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dil"
                android:textSize="16dp" />

            <Switch
                android:id="@+id/languageSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:switchTextAppearance="@style/MineCustomTabText"
                android:text="English"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_save_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveSettings"
                android:background="@drawable/roundedbutton2"
                android:fontFamily="@font/oswald"
                android:layout_marginVertical="16dp"
                android:padding="8dp"
                android:text="KAYDET"
                android:textColor="@color/white"
                android:textSize="20dp" />


        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
