<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ceng.muhendis.muneckexercises.TermsofUseActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarTermsofUse"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/greyLight"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_terms"
                android:fontFamily="@font/roboto_condensed_bold"
                android:textSize="20dp"
                android:textColor="@color/greyDarker"
                android:id="@+id/title_terms" />
        </android.support.v7.widget.Toolbar>



    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp"
            android:layout_marginTop="24dp"
            >

            <TextView
                android:id="@+id/termsOfUseContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termsOfUseContent"
                android:fontFamily="@font/oswald_light"
                android:inputType="textMultiLine"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/btn_terms_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton2"
                android:fontFamily="@font/oswald"
                android:onClick="continueTerms"
                android:layout_marginVertical="30dp"
                android:padding="8dp"
                android:text="@string/continueTerms"
                android:textColor="@color/white"
                android:textSize="20dp"
                />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
